@@ -11,7 +11,7 @@ The file is an \fBar\fP archive with a magic value of \fB!<arch>\fP.
 The file names might contain a trailing slash (since dpkg 1.15.6).
 .PP
 The first member is named \fBdebian\-split\fP and contains a series
-of lines, separated by newlines. Currently seven lines are present:
+of lines, separated by newlines. Currently eight lines are present:
 .IP \(bu 4
 The format version number, \fB2.1\fP at the time this manual page was
 written.
@@ -28,6 +28,8 @@ The maximum part size.
 .IP \(bu
 The current part number, followed by a slash and the total amount of
 parts (as in \(oq1/10\(cq).
+.IP \(bu
+The package architecture (since dpkg 1.16.1).
 .PP
 Programs which read multi-part archives should be prepared for additional
 lines to be present, and should ignore these if this is the case.
