@@ -1,5 +1,5 @@
 .\" Authors: Ian Jackson
-.TH dpkg\-split 1 "2009-06-26" "Debian Project" "dpkg utilities"
+.TH dpkg\-split 1 "2011-04-15" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-split \- Debian package archive split/join tool
 .
@@ -66,7 +66,7 @@ been generated by the same invocation of
 The parts' filenames are not significant for the reassembly process.
 
 By default the output file is called
-.IB package \- version .deb\fR.
+.IB package _ version _ arch .deb\fR.
 
 .TP
 .BR \-I ", " \-\-info " \fIpart\fP..."
@@ -195,19 +195,11 @@ call failure, a file that looked like a package part file but was
 corrupted, a usage error or some other problem.
 .
 .SH BUGS
-.B dpkg\-split
-uses some rather out-of-date conventions for the the filenames of
-Debian packages.
-
 Full details of the packages in the queue are impossible to get
 without digging into the queue directory yourself.
 
 There is no easy way to test whether a file that may be a binary
 package part is one.
-
-The architecture is not represented in the part files' header, only in
-the control information of the contained binary package file, and it
-is not present in the filenames generated.
 .
 .SH FILES
 .TP
