@@ -26,6 +26,9 @@ dpkg (1.16.1) UNRELEASED; urgency=low
   * Switch to debhelper compatibility level 7.
     - Use dh_prep instead of deprecated “dh_clean -k”.
   * Bump Standards-Version to 3.9.2 (no changes needed).
+  * Generate filenames following current conventions on “dpkg-split --join”,
+    by including the architecture in the debian-split member of a split
+    package and using underscores to separate filename parts.
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
